# ASA-ELO-Hacker

./: README.md
judge-based-constraint-model/: README.md
optimizer-estimation-model/: README.md  asa_elo_project.py  asa_elo_v2.html  fit_dump.json  pyproject.toml
optimizer-estimation-model/src/asa_elo_project/: __init__.py  __main__.py  fitting.py  html_patch.py  model.py  reporting.py  types.py
optimizer-estimation-model/src/asa_elo_project.egg-info/: SOURCES.txt  requires.txt  top_level.txt
optimizer-estimation-model/src/asa_elo_project/cli/: main.py
optimizer-estimation-model/src/asa_elo_project/data/: circuit_2025.py
optimizer-estimation-model/tests/: test_smoke.py
